Change spelling of "licence" to more common version - "license"

--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -115,9 +115,9 @@ Store uploads in a Google Cloud Storage bucket.
 
 ## Enterprise Settings
 
-Some features in self-hosted GrowthBook are only available with an Enterprise licence key. Reach out to [sales@growthbook.io](mailto:sales@growthbook.io) to learn more.
+Some features in self-hosted GrowthBook are only available with an Enterprise license key. Reach out to [sales@growthbook.io](mailto:sales@growthbook.io) to learn more.
 
-- **LICENCE_KEY** - Your signed licence key provided by the GrowthBook team
+- **LICENSE_KEY** - Your signed license key provided by the GrowthBook team
 - **SSO_CONFIG** - A JSON-encoded string that configures SSO (using OpenID Connect). It should be an object with the following keys:
   - `clientId` (string)
   - `clientSecret` (string)
