Update docs, hide secret API keys behind feature flag

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -4,13 +4,13 @@ The API is one way to keep cached features up-to-date on your servers.
 
 With the **API**, your servers pull feature definitions from GrowthBook in a cronjob (or similar).
 
-With [Webhooks](/app/webhooks), GrowthBook calls out to your servers as soon as features change in GrowthBook.
+With [Webhooks](/app/webhooks), we call out to your servers as soon as someone changes a features in GrowthBook.
 
 ## Environments and API Keys
 
-When you first start setting up features in GrowthBook, we create a "production" environment for you with an API key.
+When you first start setting up features in GrowthBook, we create a "production" environment for you with a Publishable API Key. This key provides limited readonly access to your features and is safe to use from any of our SDKs - client-side, server-side, or mobile.
 
-You can add new environments by going to **Settings -> Environments**.
+You can add new environments by going to **Features -> Environments**. You can manage your API keys by going to **Settings -> API Keys**.
 
 ## Feature Definitions Endpoint
 
