--- a/packages/docs/pages/faq.mdx
+++ b/packages/docs/pages/faq.mdx
@@ -34,6 +34,14 @@ The `trackingCallback` only fires when a user is included in an experiment. If y
 
 If you are using the Javascript or React SDK in a browser environment, you can install the [GrowthBook DevTools Chrome Extension](https://chrome.google.com/webstore/detail/growthbook-devtools/opemhndcehfgipokneipaafbglcecjia) to help you debug.
 
+**Note**: To use the plugin, you will need to pass `enableDevMode: true` when creating your GrowthBook instance.
+
+```ts
+const growthbook = new GrowthBook({
+  enableDevMode: true,
+},
+```
+
 ## How do I run an A/B test in GrowthBook?
 
 The recommended way to run an A/B test is by using Feature Flags and our SDKs.
@@ -94,6 +102,18 @@ If you are using feature flags, we recommend adding a caching layer between the 
 - Enable bucket ACL and set ownership to Bucket owner preferred: [read more here](https://stackoverflow.com/questions/70333681/for-an-amazon-s3-bucket-deplolyent-from-guithub-how-do-i-fix-the-error-accesscon).
 - Make sure the S3 bucket is publically accessible
 - Make sure CORS settings are correct. Add your URLs to the AllowedOrigins array or set to "\*"
+
+## How do I use the Chrome DevTools Extension?
+
+- Make sure you are using the React or Javascript SDK
+- Install the [Chrome DevTools Extension](https://chrome.google.com/webstore/detail/growthbook-devtools/opemhndcehfgipokneipaafbglcecjia)
+- Pass the `enableDevMode: true` option into the GrowthBook constructor
+
+```ts
+const growthbook = new GrowthBook({
+  enableDevMode: true,
+},
+```
 
 ## Can't find your question?
 
