--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -60,6 +60,13 @@ growthbook:
 - **JWT_SECRET** - Auth signing key (use a long random string)
 - **ENCRYPTION_KEY** - Data source credential encryption key (use a long random string)
 
+If you change the `ENCRYPTION_KEY`, you will need to migrate any existing data sources using the following script:
+
+```sh
+# If you didn't have an ENCRYPTION_KEY before, leave OLD_KEY blank below
+docker-compose run growthbook yarn migrate-encryption-key OLD_KEY
+```
+
 <div className="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
   When using GrowthBook in production, it is important to change the{" "}
   <code>NODE_ENV</code> to to "production" and change the{" "}
