--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -62,7 +62,7 @@ growthbook:
 
 If you change the `ENCRYPTION_KEY`, you will need to migrate any existing data sources using the following script:
 
-```sh
+```bash
 # If you didn't have an ENCRYPTION_KEY before, leave OLD_KEY blank below
 docker-compose run growthbook yarn migrate-encryption-key OLD_KEY
 ```
