Use "SDK Endpoint" instead of "Publishable API Key" Also, improve CodeSnippet modal, move endpoints to environments page

--- a/packages/docs/pages/guide/nextjs-and-growthbook.mdx
+++ b/packages/docs/pages/guide/nextjs-and-growthbook.mdx
@@ -53,7 +53,7 @@ After that, visit `http://localhost:3000` and create your first user account.
 
 ## 3. Integrate the GrowthBook React SDK into our Next.js app
 
-GrowthBook will generate some integration code for you, including a unique API endpoint to load your features from.
+GrowthBook will generate some integration code for you, including a unique SDK Endpoint to load your features from.
 
 <img
   src="/images/guides/nextjs-2-feature-flag-key.png"
