--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -10,7 +10,7 @@ better.
 
 ## Environments
 
-GrowthBook comes with one environment by default (**production**), but you can add as many as you need. Each environment has its own unique API endpoint for getting a list of features.
+GrowthBook comes with one environment by default (**production**), but you can add as many as you need. Each environment has its own unique SDK Endpoint for getting a list of features.
 
 Features can be enabled and disabled on a per-environment basis.
 
@@ -178,14 +178,14 @@ There are few ways to integrate GrowthBook features into your application.
 
 At a high level, the features you create in the GrowthBook UI can be rendered as a single JSON feature definitions file for each environment (e.g. dev and production). The contents of this JSON file must be passed into the SDK. Any feature flags evaluated before the JSON file loads will have a value of `null`, so it's important to load the features quickly.
 
-There is a public GrowthBook [API endpoint](/app/api) for the feature definitions JSON:
+There is a public GrowthBook [SDK Endpoint](/app/api) for the feature definitions JSON:
 
-- https://cdn.growthbook.io/api/features/{MY_API_KEY} (GrowthBook Cloud)
-- http://localhost:3100/api/features/{MY_API_KEY} (Self-hosted)
+- https://cdn.growthbook.io/api/features/{SDK_KEY} (GrowthBook Cloud)
+- http://localhost:3100/api/features/{SDK_KEY} (Self-hosted)
 
-The API includes a cache header with a 30-second TTL (plus stale-while-revalidate and stale-if-error headers).
+The endpoint response includes a cache header with a 30-second TTL (plus stale-while-revalidate and stale-if-error headers).
 
-**Note:** There are separate API keys for each environment (e.g. dev and production). Make sure you are using the right one for your environment.
+**Note:** There are separate SDK Endpoints for each environment (e.g. dev and production). Make sure you are using the right one for your environment.
 
 ### Load directly (client-side rendering)
 
