Add beta badge to docs for REST api

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -1,6 +1,6 @@
 # API
 
-GrowthBook's API has both public endpoints plus an authenticated REST API (beta).
+GrowthBook's API has both public endpoints plus an authenticated REST API <span className="bg-yellow-400 dark:bg-yellow-600 p-1 rounded text-xs ml-1">beta</span>.
 
 ## Public Endpoints
 
@@ -70,7 +70,7 @@ We offer official SDKs that work with these data structures in a few popular lan
 - [Kotlin (Android)](/lib/kotlin)
 - [Build your own](/lib/build-your-own)
 
-## Authenticated REST API (beta)
+## Authenticated REST API <span className="bg-yellow-400 dark:bg-yellow-600 p-1 rounded text-xs ml-1 align-middle">beta</span>
 
 In addition to the public API endpoints, GrowthBook also offers a full REST API for interacting with the GrowthBook application. This is currently in **beta** as we add more authenticated API routes and features.
 
