Updated language on the docs

--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -223,7 +223,7 @@ With encryption enabled, the response would be:
     features: {},
     encryptedFeatures: {
       content: "encryptedFeatures",
-      iv: "hash"
+      iv: "initializationVector"
     }
   }
 ```
