--- a/packages/docs/pages/lib/js.mdx
+++ b/packages/docs/pages/lib/js.mdx
@@ -454,7 +454,7 @@ With encryption enabled, the response would be:
     features: {},
     encryptedFeatures: {
       features: "encryptedFeatures",
-      iv: "hash"
+      iv: "initializationVector"
     }
   }
 ```
