--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -213,63 +213,7 @@ The `result` argument is the same thing returned from the `useFeature` hook.
 
 Note: If you evaluate the same feature multiple times (and the value doesn't change), the callback will only be fired the first time.
 
-### Encrypting SDK Endpoints
-
-When creating an SDK endpoint, you have the option to enable encryption. When enabled, GrowthBook will encrypt the list of features returned in the API response.
-
-With encryption enabled, the response would be:
-
-```js
-  {
-    status: 200,
-    features: {},
-    encryptedFeatures: "encryptedString"
-  }
-```
-
-The features are encrypted with the AES-CBC algorithm via WebCrypto API's `SubtleCrypto` and the content inside (`features` and `iv`) are encoded as a `base64` string. An example of how to decrypt the feature list is below:
-
-```ts
-async function decrypt(keyString, encryptedText) {
-    const base64ToBuf = (b) => Uint8Array.from(atob(b), (c) => c.charCodeAt(0));
-    const key = await window.crypto.subtle.importKey(
-      "raw",
-      Uint8Array.from(atob(keyString), (c) => c.charCodeAt(0)),
-      { name: "AES-CBC", length: 128 },
-      true,
-      ["encrypt", "decrypt"]
-    );
-    const [iv, cipherText] = encryptedText.split(".");
-    const plainTextBuffer = await window.crypto.subtle.decrypt(
-      { name: "AES-CBC", iv: base64ToBuf(iv) },
-      key,
-      base64ToBuf(cipherText)
-    );
-    return new TextDecoder().decode(plainTextBuffer);
-  }
-
-useEffect(() => {
-  // Load feature definitions JSON from GrowthBook API
-  fetch("https://cdn.growthbook.io/api/features/<your api key>")
-    .then((res) => res.json())
-    .then(async (json) => {
-        growthbook.setFeatures(
-          JSON.parse(
-            await decrypt(
-              "privateKeyString", //This can be found by going to /settings/keys in your account.
-              json.encrpytedFeatures
-            )
-          )
-        );
-      }
-    })
-    .catch(() => {
-      console.log("Failed to fetch GrowthBook feature definitions");
-    });
-}, [router.pathname]);
-```
-
-## Dev Mode
+### Dev Mode
 
 You can enable Dev Mode by passing `enableDevMode: true` when you create a new GrowthBook Context. Doing so will provide you with a much better developer experience when getting started.
 
@@ -281,6 +225,58 @@ const growthbook = new GrowthBook({
   enableDevMode: true,
 });
 ```
+
+## Hiding Features from Users
+
+If you fetch the list of features from a client-side app, any of your users could inspect the network request and see which features and experiments you are running. In most cases, this is not a big deal, but if you did want to prevent that, you have two options:
+
+1. Evaluate feature flags using a server-side SDK and only pass the result to the browser
+2. Enable encryption for your SDK Endpoint
+
+If you enable encryption for an SDK Endpoint, instead of returning features as human-readable JSON, we will return it as an encrypted string that must be decrypted before being passed into the SDK.
+
+With encryption enabled, the response from the SDK Endpoint will be in the format:
+
+```js
+  {
+    status: 200,
+    encryptedFeatures: "abcdef123456GHIJKL0987654321..."
+  }
+```
+
+The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
+
+Here's an example of decrypting features using the SubtleCrypto api, which is built into all modern browsers:
+
+```jsx
+// Helper function to decrypt using SubtleCrypto
+async function decrypt(encryptedText) {
+  const GB_ENCRYPTION_KEY = "MY_ENCRYPTION_KEY"; // <-- Set your encryption key here
+  const base64ToBuf = (b) => Uint8Array.from(atob(b), (c) => c.charCodeAt(0));
+  const key = await window.crypto.subtle.importKey(
+    "raw", base64ToBuf(GB_ENCRYPTION_KEY),
+    { name: "AES-CBC", length: 128 }, true, ["encrypt", "decrypt"]
+  );
+  const [iv, cipherText] = encryptedText.split(".");
+  const plainTextBuffer = await window.crypto.subtle
+    .decrypt({name: "AES-CBC", iv: base64ToBuf(iv)}, key, base64ToBuf(cipherText));
+  return new TextDecoder().decode(plainTextBuffer);
+}
+
+function MyApp() {
+  useEffect(() => {
+    // Load features from the encrypted SDK Endpoint and decrypt them
+    fetch("https://cdn.growthbook.io/api/features/<your api key>")
+      .then((res) => res.json())
+      .then((json) => decrypt(GB_ENCRYPTION_KEY, json.encryptedFeatures))
+      .then((featuresStr) => growthbook.setFeatures(JSON.parse(featuresStr))
+      .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
+  }, []);
+  // ...
+}
+```
+
+**Note**: This method is not completely private. Users could find your encryption key if they inspect your minified javascript files.
 
 ## Inline Experiments
 
